assets/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300,400,500,600,700,800&family=Oswald:wght@300&family=Neonderthaw&display=swap');

/*Colors---------------------------------------------------------*/
:root {
  --main-orange-color: #d86313;
  --main-yellow-color: #faf01d;
  --bg-orange-color: #ffba75;
  --bg-black-color: rgba(0,0,0,0.8);
}

/*Main---------------------------------------------------------*/
body {
  font-family: "Open Sans", sans-serif;
  color: var(--main-orange-color);
  background-color: var(--bg-black-color);
}

img {
  border: 2px solid var(--main-yellow-color);
  border-radius: 50%;
}

.alert-banner-sm {
  margin: 0px;
  font-size: 14px;
  padding: 10px;
  background-color: var(--main-orange-color);
}

.alert-banner-md {
  margin: 0px;
  padding: 10px;
  background-color: var(--main-orange-color);
}

.alert-banner-sm,
.alert-banner-md {
  position: relative;
  width: 100vw;
  text-align: center;
  padding: 2px 0 2px 0;
  border: 2px solid var(--bg-orange-color);
}

.alert-banner-sm a,
.alert-banner-md a {
  text-decoration: none;
  color: white;
}

.navbar {
  border-top: 2px solid var(--main-orange-color);
  border-bottom: 2px solid var(--main-orange-color);
}

.nav-menu-container a {
  color: rgb(0, 0, 0);
  text-decoration: none;
}

.nav-menu-container .active {
  color: rgb(0, 0, 0);
  border: 2px solid var(--main-orange-color);
  padding: 8px;
}

.nav-menu-container a:focus {
  color: rgb(0, 0, 0);
  text-decoration: none;
}

.logo {
  position: relative;
  top: -10px;
  display: inline-block;
  height: 78px;
  width: 78px;
  background-image: url("../images/bg-logo-circular.png");
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
}

.nav-container,
.nav-menu-container {
  position: relative;
  width: 100%;
  height: 57px;
  background-color: var(--main-yellow-color);
}

.logo-container {
  position: absolute;
  display: inline-block;
  height: 78px;
  width: 78px;
  z-index: 1;
}

.nav-logo-spacing {
  width: 80px;
}

.nav-menu-sm .nav-home-link,
.nav-menu-sm .nav-join-link {
  display: inline-block;
  margin: 0 auto;
  margin-top: 17px;
  font: 500 16px "Open Sans", sans-serif;
  text-decoration: none;
}

.nav-menu-md .nav-home-link,
.nav-menu-md .nav-join-link,
.nav-facilities-link,
.nav-contact-link {
  display: inline-block;
  margin: 0 auto;
  margin-top: 17px;
  font: 500 20px "Open Sans", sans-serif;
  text-decoration: none;
}

.nav-menu-container {
  display: flex;
}

.navbar .navigation {
  width: 85px;
}

/*Hamburger Icon Start---------------------------------------------------------*/
/*Hamburger Icon Styling Sourced from https://codepen.io/ngochuynh/pen/yKrvVZ with some styling customised*/

.p-menu1 {
  height: 100%;
}

/* Hamburger */
.hamburger1 {
  position: absolute;
  height: 45px;
  margin: 5px 10px 10px 10px;
  width: 45px;
  display: -ms-grid;
  display: grid;
  grid-template-rows: repeat(3, 1fr);
  justify-items: center;
  z-index: 120;
}

.hamburger1 div {
  background-color: rgb(0, 0, 0);
  position: relative;
  width: 40px;
  height: 5px;
  margin: 7px -20px 0 0;
}

#toggle1 {
  display: none;
}

#toggle1:checked+.hamburger1 .top {
  -webkit-transform: rotate(-45deg);
  transform: rotate(-45deg);
  margin-top: 22.5px;
}

#toggle1:checked+.hamburger1 .meat {
  -webkit-transform: rotate(45deg);
  transform: rotate(45deg);
  margin-top: -5px;
}

#toggle1:checked+.hamburger1 .bottom {
  -webkit-transform: scale(0);
  transform: scale(0);
}

#toggle1:checked~.menu1 {
  height: 220px;
}

/* Menu */
.menu1 {
  width: 100%;
  background-color: var(--main-yellow-color);
  margin: 0;
  display: -ms-grid;
  display: grid;
  grid-template-rows: 1fr repeat(4, 0.5fr);
  grid-row-gap: 15px;
  padding: 0;
  list-style: none;
  clear: both;
  width: auto;
  text-align: center;
  height: 0px;
  overflow: hidden;
  transition: height .4s ease;
  z-index: 120;
  -webkit-transition: all 0.3s ease;
  transition: all 0.3s ease;
}

.menu1 a:first-child {
  margin-top: 50px;
}

.menu1 a:last-child {
  margin-bottom: 40px;
}

.link1 {
  width: 100%;
  margin: 0;
  padding: 10px 0;
  font: 500 16px 'Open Sans', sans-serif;
}

.link1:hover {
  background-color: var(--main-yellow-color);
  color: rgb(61, 61, 61);
  -webkit-transition: all 0.3s ease;
  transition: all 0.3s ease;
}

.link2 {
  width: 100%;
  margin: 0;
  font: 500 16px 'Open Sans', sans-serif;
}

.link2:hover {
  background-color: var(--main-yellow-color);
  color: rgb(61, 61, 61);
  -webkit-transition: all 0.3s ease;
  transition: all 0.3s ease;
}

/*Hamburger Icon End---------------------------------------------------------*/
/*Home Page Exclusive Items Start--------------------------------------------*/

.hero-container {
  position: relative;
  background-image: url("../images/hero-sm.png");
  background-size: cover;
  background-position-x: -200px;
  height: 60vh;
  z-index: -1;
}

.hero-container h1 {
  font-family: "Neonderthaw", cursive;
  font-size: 30px;
  padding-top: 10%;
  padding-left: 5%;
  color: var(--main-orange-color);
}

.hero-container p {
  font-family: "Neonderthaw", cursive;
  padding: 10px 2%;
  color: var(--main-yellow-color);
  position: absolute;
  bottom: 5%;
  text-align: center;
  background-color: rgba(0, 0, 0, 0.4);
  border-color: rgba(0, 0, 0, 0.4);
  border-radius: 20%;
}

#sale-info h1 {
  text-align: center;
  margin-top: 2%;
}

#sale-info a {
  text-decoration: none;
  color:var(--main-yellow-color);
  font-weight: 600;
}

.home-image-container {
  text-align: center;
}

.home-image-container img {
  width: 80%;
  text-align: center;
}

#sale-info span {
  text-transform: uppercase;
  font-weight: 600;
}

/*Home Page Exclusive Items End----------------------------------------------*/
/*Footer Start---------------------------------------------------------------*/

footer {
  color: black;
  display: flex;
  justify-content: space-between;
  align-items: center;
  font-size: 10px;
  background-color: var(--main-yellow-color);
  border-top: 2px solid var(--main-orange-color);
  border-bottom: 2px solid var(--main-orange-color);
}

footer p {
  margin: 0;
}

footer a {
  text-decoration: none;
  color: inherit;
}

footer button span {
  font-family: "Open Sans", sans-serif;
  font-size: 10px;
  font-weight: 400;
}

.footer-items-container {
  position: relative;
  width: 100vw;
  height: 95px;
  overflow: hidden;
}

.footer-contact {
  position: absolute;
  float: left;
  height: auto;
  width: auto;
  margin: 0 auto;
  padding-top: 4px;
  padding-left: 2px;
}

.footer-return-to-top {
  width: 100px;
  margin-top: 25px;
  margin-right: auto;
  margin-bottom: 0;
  margin-left: auto;
  text-align: center;
}

.footer-return-to-top button {
  font-size: 2em;
  border: none;
  background-color: inherit;
  text-align: center;
}

.footer-return-to-top a {
  color: inherit;
  text-decoration: none;
}

.footer-socials {
  color: inherit;
  position: relative;
  bottom: 70px;
  text-align: right;
  float: right;
  width: auto;
  margin: 0 auto;
  padding-top: 8px;
  padding-right: 2px;
}

.footer-socials a {
  color: inherit;
  text-decoration: none;
  font-size: 2em;
  padding: 4px;
}

/*Footer End-----------------------------------------------------------------*/
/*Media Queries--------------------------------------------------------------*/
@media screen and (min-width: 769px) {
  .alert-banner-sm {
    display: none;
  }

  .nav-menu-sm {
    display: none;
  }

  .hero-container {
    background-size: cover;
    background-image: url("../images/hero.jpg");
    background-position-x: 0;
  }

  .hero-container p {
    padding-left: 5%;
    font-size: 2em;
  }

  .home-image-container {
    margin-bottom: 1em;
  }

  .home-p1-img1-container,
  .home-p2-img2-container,
  .home-p3-img3-container {
    display: flex;
  }

  .home-p2-sm {
    display: none;
  }

  .home-p2-md {
    margin: 5% 0;
  }
  
  .home-p1 {
    float: left;
  }

  .home-p1 p {
    text-align: right;
    margin-top: 10%;
  }

  .home-p2 p {
    text-align: left;
    margin-top: 10%;
  }

  .home-p3 p {
    text-align: right;
    margin: 20% 0;
  }


  .home-img1 {
    float: right;
  }

  .home-p2 {
    float: right;
  }

  .home-img2 {
    float: left;
  }

  .home-p3 {
    float: left;
  }

  .home-img3 {
    float: right;
  }

  footer button span {
    font-size: 14px;
  }
  
  footer {
    font-size: 14px;
  }

  .footer-items-container {
    height: 140px;
  }

  .footer-return-to-top {
    margin-top: 45px;
  }

  .footer-socials {
    bottom: 80px;
  }

  .footer-socials br {
    display: none;
  }

  .footer-socials-sm {
    display: none;
  }
}

@media screen and (min-width: 391px) {

  .hero-container h1 {
    padding-top: 5%;
    font-size: 4em;
  }
}

@media screen and (min-width: 391px) and (max-width: 768px) {
  .hero-container {
    background-position-x: -10px;
  }
}

@media screen and (min-width: 391px) and (max-width: 490px) {
  .hero-container {
    background-position-x: -100px;
  }
}

@media screen and (max-width: 768px) {
  
  .alert-banner-md {
    display: none;
  }

  .nav-menu-md {
    display: none;
  }

  .home-image-container {
    margin-bottom: 2%;
    text-align: center;
  }

  .home-p2-md {
    display: none;
  }

  .home-img3 {
    display: none;
  }

  .footer-socials-md {
    display: none;
  }
  
  #sale-info p {
    text-align: center;
  }
}

@media screen and (min-width: 769px) {
  .hero-container {
    background-size: cover;
    background-image: url("../images/hero.jpg");
    height: 75vh;
  }

  .home-p1,
  .home-p3 {
    width: 100%;
    padding-left: 1em;
  }

  .home-p2 {
    width: 100%;
    padding-right: 1em;
    text-align: right;
  }

  .home-p1-img1-container,
  .home-p2-img2-container,
  .home-p3-img3-container {
    margin: 0 2em;
  }
}

@media screen and (min-width: 1200px) {
  body {
    font-size: 20px;
  }

  .home-p3 p {
    margin: 15% 0;
  }
}

